--- a/views/managersDashboard.pug
+++ b/views/managersDashboard.pug
@@ -34,7 +34,9 @@ html
               |  Stock
           br
           li
-            a(href='#') 
+            a(href='/addprocurement')
+             i.fas.fa-shopping-cart
+             |  Procurement 
           br
           li
             a(href='#')
@@ -72,10 +74,11 @@ html
             .stat-box
               h3 High Selling Product
               p Beans
-              p 12
+              p 8000000ugx
             .stat-box
               h3 Current products
-              p 150
+              p maize 
+              p beans
 
             // Row 2
             .stat-box
@@ -84,16 +87,16 @@ html
                 li Soybeans – 50kgs
                 li Maize – 30 kgs
             .stat-box
-              h3 Recent Activities
+              h3 Recent Orders
               ul
-                li Registered new produce: Kale
-                li Sale recorded: $500 - 10:30 AM
-                li Stock updated: Rice
+                li Beans
+                li Cowpeas 
+                li 
             .stat-box
-              h3 Employee Highlights
+              h3 Available Stock
               ul
-                li John – 15 sales
-                li Mary – Updated 3 stock items
-                li Ahmed – Handled 5 orders
+                li Cowpeas  9000kgs
+                li Soybeans  1000kgs
+                li Gnuts    8000kgs
 
     script(src='js/managersDashboard.js')
