--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -10,8 +10,7 @@
     }
 
     .signup-container {
-      /* background-color: rgb(44, 110, 44); */
-      background:transparent;
+      background-color:  rgba(42, 157, 143, 0.5);
       padding: 2rem 2.5rem;
       border-radius: 12px;
       box-shadow: 0 4px 20px rgba(0,0,0,0.1);
@@ -45,7 +44,7 @@
       width: 100%;
       padding: 12px;
       background-color: white;
-      color: black;
+      color: white;
       font-size: 1rem;
       font-weight: bold;
       border: none;
@@ -55,13 +54,19 @@
     }
 
     button:hover {
-      background-color: black;
+      background-color:black;
     }
 
-    /* .error {
-      color: #e74c3c;
-      font-size: 0.9rem;
-      margin-top: -10px;
-      margin-bottom: 10px;
-    } */
+    .error {
+      color: red;
+      font-size: 0.875rem;
+      margin-top: 0.25rem;
+      display: block;
+    }
+    
+    input.error-border,
+    select.error-border {
+      border: 1px solid red;
+    }
+    
   
