--- a/views/addprocurement.pug
+++ b/views/addprocurement.pug
@@ -1,46 +1,68 @@
 doctype html
-head
-  meta(charset='UTF-8')
-  meta(name='viewport' content='width=device-width, initial-scale=1.0')
-  title Produce Procurement Form
-  link(rel='stylesheet' href='./css/addprocurement.css')
+html
+  head
+    meta(charset='UTF-8')
+    meta(name='viewport' content='width=device-width, initial-scale=1.0')
+    title Produce Procurement Form
+    link(rel='stylesheet' href='./css/addprocurement.css')
   body
-.form-container
-  h2 Produce Procurement Form
-  form#produceForm(action='/addprocurement' method='POST')
-    .form-group
-      label(for='produceName') Name of Produce
-      input#produceName(type='text' name='produceName')
-    .form-group
-      label(for='produceType') Type of Produce
-      select#produceType(name='produceType' required='')
-        option(value='') Select type
-        option(value='Grain') Grain
-        option(value='Legume') Legume
-    .form-group
-      label(for='tonnage') Tonnage (kgs)
-      input#tonnage(type='number' name='tonnage')
-    .form-group
-      label(for='cost') Cost (UgX)
-      input#cost(type='number' name='cost')
-    .form-group
-      label(for='dealerName') Dealer Name
-      input#dealerName(type='text' name='dealerName')
-    .form-group
-      label(for='branchName') Branch Name
-      select#branchName(name='branchName')
-        option(value='') Select Branch
-        option(value='Mattuga') Mattuga
-        option(value='Maganjo') Maganjo
-    .form-group
-      label(for='contact') Dealer Contact
-      input#contact(type='tel' name='contact')
-    .form-group
-      label(for='date') Date
-      input#date(type='date' name='date')
-    .form-group
-      label(for='time') Time of Produce
-      input#time(type='time' name='time')
-    button(type='submit') Submit
-    p#errorMsg.error
-script(src='js/addprocurement.js')
+    .form-container
+      h2 Produce Procurement Form
+      form#produceForm(action='/addprocurement' method='POST')
+        .form-group
+          label(for='produceName') Name of Produce
+          input#produceName(type='text' name='produceName')
+          span.error-message#produceNameError
+
+        .form-group
+          label(for='produceType') Type of Produce
+          select#produceType(name='produceType' required='')
+            option(value='') Select type
+            option(value='Grain') Grain
+            option(value='Legume') Legume
+          span.error-message#produceTypeError
+
+        .form-group
+          label(for='tonnage') Tonnage (kgs)
+          input#tonnage(type='number' name='tonnage')
+          span.error-message#tonnageError
+
+        .form-group
+          label(for='cost') Cost (UgX)
+          input#cost(type='number' name='cost')
+          span.error-message#costError
+
+        .form-group
+          label(for='dealerName') Dealer Name
+          input#dealerName(type='text' name='dealerName')
+          span.error-message#dealerNameError
+
+        .form-group
+          label(for='branchName') Branch Name
+          select#branchName(name='branchName')
+            option(value='') Select Branch
+            option(value='Mattuga') Mattuga
+            option(value='Maganjo') Maganjo
+          span.error-message#branchNameError
+
+        .form-group
+          label(for='contact') Dealer Contact
+          input#contact(type='tel' name='contact')
+          span.error-message#contactError
+
+        .form-group
+          label(for='date') Date
+          input#date(type='date' name='date')
+          span.error-message#dateError
+
+        .form-group
+          label(for='time') Time of Produce
+          input#time(type='time' name='time')
+          span.error-message#timeError
+
+        .form-group
+          button.button(type='submit') Submit
+
+        p#errorMsg.error
+
+    script(src='js/addprocurement.js')
