--- a/views/creditSaleList.html
+++ b/views/creditSaleList.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Credit Sales Table</title>
-  <link rel="stylesheet" href="/public/css/creditSaleList.css">
+  <link rel="stylesheet" href="/css/creditSaleList.css">
 </head>
 <body>
   <div class="container">
@@ -55,6 +55,6 @@
   <footer>
     &copy; 2025 AgriCredit System | All Rights Reserved.
   </footer>
-  <script src="creditSaleList.js"></script>
+  <script src="/js/creditSaleList.js"></script>
 </body>
 </html>
