--- a/views/signup.pug
+++ b/views/signup.pug
@@ -1,33 +1,56 @@
 doctype html
-head
-  meta(charset='UTF-8')
-  meta(name='viewport' content='width=device-width, initial-scale=1.0')
-  title Karibu Grocery Signup
-  link(rel='stylesheet' href='/css/signup.css')
-.signup-container
-  h2 Karibu Grocery - Signup
-  form#signupForm(action="/SignUp" method="post")
-    label(for='firstName') First Name
-    input#firstName(type='text' name="firstName")
-    label(for='lastName') Last Name
-    input#lastName(type='text' name="lastName")
-    label(for='email') Email
-    input#email(type='email'  name="email")
-    label(for='password') Password
-    input#password(type='password' name="password")
-    label(for='confirmPassword') Confirm Password
-    input#confirmPassword(type='password' name="confirmPassword")
-    #passwordError.error Passwords do not match
-    label(for='role') Role
-    select#role(name='role',)
-      option(value='')  Select Role 
-      option(value='director') director
-      option(value='salesAgent') salesAgent
-      option(value='Manager') Manager
-    label(for='branch') Branch Name
-    select#branchName(name='branch')
-      option(value='select') select branch
-      option(value='Matugga') matugga
-      option(value='Maganjo') Maganjo
-    button(type='submit') Sign Up
-script(src='signup.js')
+html
+  head
+    meta(charset='UTF-8')
+    meta(name='viewport' content='width=device-width, initial-scale=1.0')
+    title Karibu Grocery Signup
+    link(rel='stylesheet' href='./css/signup.css')
+  body
+    .signup-container
+      h2 Karibu Grocery - Signup
+
+      //- Error container for password mismatch (still used for JS logic)
+      #errorContainer(style="display: none; color: red; margin-bottom: 1em;")
+        | Passwords do not match.
+
+      form#signupForm(action="/SignUp" method="post")
+        label(for='firstName') First Name
+        input#firstName(type='text' name="firstName")
+        span#firstNameError(class='error')
+
+        label(for='lastName') Last Name
+        input#lastName(type='text' name="lastName")
+        span#lastNameError(class='error')
+
+        label(for='email') Email
+        input#email(type='text' name="email")
+        span#emailError(class='error')
+
+        label(for='password') Password
+        input#password(type='password' name="password")
+        span#passwordError(class='error')
+
+        label(for='confirmPassword') Confirm Password
+        input#confirmPassword(type='password' name="confirmPassword")
+        span#confirmPasswordError(class='error')
+
+        label(for='role') Role
+        select#role(name='role')
+          option(value='') Select Role 
+          option(value='director') director
+          option(value='salesAgent') salesAgent
+          option(value='Manager') Manager
+        span#roleError(class='error')
+
+        label(for='branch') Branch Name
+        select#branchName(name='branch')
+          option(value='select') select branch
+          option(value='Matugga') Matugga
+          option(value='Maganjo') Maganjo
+        span#branchError(class='error')
+
+        button(type="submit") Sign Up
+
+    script(src='/js/signup.js')
+
+
