--- a/views/stocklist.pug
+++ b/views/stocklist.pug
@@ -3,59 +3,49 @@ html
   head
     meta(charset='UTF-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
-    title Stock List
-    link(rel='stylesheet' href='/bootstrap-5.0.2-dist/css/bootstrap.css')
-    link(rel='stylesheet' href='/css/a.css')
+    title Karibu Grocery - Stock Management
+    link(rel='stylesheet' href='/css/stocklist.css')
   body
-    header.bg-dark.text-light.py-3
-      h1.text-center Stock List
-      
-      nav.text-center
-        a(href='/director' class='btn btn-light') directors  dashboard
-        a(href='/manager' class='btn btn-light') Manager Dashboard
-    main.container.my-4
-      h2 Stock
-      table#procurement-table.table.table-striped.table-bordered
+    header
+      h1  Stock Management
+
+    main
+
+      table#stockTable
         thead
           tr
-            th(scope='col') Produce Name
-            th(scope='col') Produce Type
-            th(scope='col') Tonnage
-            th(scope='col') Cost
-            th(scope='col') Dealer Name
-            th(scope='col') Branch Name
-            th(scope='col') Contact
-            th(scope='col') Selling Price
-            th(scope='col') Date
-            th(scope='col') Time
-            th(scope='col') Actions
-               
+            th Produce Name
+            th Product Type
+            th Tonnage 
+            th Cost 
+            th Dealer Name 
+            th Contact 
+            th Selling Price 
+            th Date 
+            th Time 
+            th Action
+
         tbody
           if stocks && stocks.length
             each stock in stocks
               tr
                 td #{stock.produceName}
-                td #{stock.produceType}
+                td #{stock.produceType} 
                 td #{stock.tonnage}
                 td #{stock.cost}
                 td #{stock.dealerName}
-                td #{stock.branchName}
                 td #{stock.contact}
-                td #{stock.sellingPrice}
-                td #{stock.Date}
-                td #{stock.Time}
-                    
-                td
-                  // Update Button
-                  a.btn.btn-primary.btn-sm(href='/updatestock/' + stock._id) Update
-
-                  // Delete Form
-                  form(method='POST' action='/delete-stock' style='display:inline;')
-                    input(type='hidden', name='id', value=stock._id)
-                    button.btn.btn-danger.btn-sm(type='submit') Delete
+                td #{stock.sellingprice}
+                td #{stock.date}
+                td #{stock.time}
+                 td
+                  button.btn.btn-update(type='button', onclick='UpdateRow(this)') Update
+                  button.btn.btn-delete(type='button', onclick='deleteRow(this)') Delete
           else
             tr
-              td(colspan='11') No stock records available
+              td(colspan="10" class="no-data") No stock data available.
 
-      a(href='/addstock' class='btn btn-primary mt-3') Add New Stock
-    script(src='/js/saleslist.js')
+      div.button-container
+      button.btn.btn-success(onclick="window.location.href='/addStock'") Add Stock
+
+    script(src='/js/stocklist.js')
