changed the procurement background

--- a/public/css/Login.css
+++ b/public/css/Login.css
@@ -1,6 +1,9 @@
 
   body {
     background-image: url('../img/home.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center ;
     display: flex;
     justify-content: center;
     align-items: center;
