--- a/public/css/addproducesale.css
+++ b/public/css/addproducesale.css
@@ -10,6 +10,8 @@
 body {
   font-family: Arial, sans-serif;
   background-image: url('../img/index4.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
   display: flex;
   justify-content: center;
   align-items: center;
